fix : flex wrapping

--- a/css/media.css
+++ b/css/media.css
@@ -34,6 +34,7 @@
   justify-content: space-evenly;
   background-color: #9D0208;
   max-width: 50rem;
+  flex-wrap: wrap;
 }
 
 @media screen and (max-width: 850px) {
